# jewel

examples/nrf51/: Cargo.toml
examples/nrf51/.cargo/: config.toml
examples/nrf52833/.cargo/: config.toml
examples/nrf52840/: Cargo.toml
jewel-nrf/: Cargo.toml
jewel-nrf/src/: lib.rs
