[package]
edition = "2021"
name = "jewel-embassy-nrf52840-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "beacon"
test = false
bench = false
path = "../src/bin/beacon.rs"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
jewel = { version = "0.1", path = "../../jewel" }
jewel-nrf = { version = "0.1", path = "../../jewel-nrf", features = ["nrf52840"] }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/2649/head" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/2649/head" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "refs/pull/2649/head" }

[profile.release]
debug = 2
